--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
     font-family: 'Ubuntu', sans-serif;
-
+    margin: 0;
 }
 
 h1{
@@ -31,4 +31,8 @@ p{
     font-weight: 700;
     padding: 10px 40px;
     border-radius: 5px;
+}
+.top-banner{
+    background-image: url(images/top-banner.png);
+    background-repeat: no-repeat;
 }
